--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,13 +24,7 @@
             android:name=".ProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".StatsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".EquipmentActivity"
-            android:exported="false" />
-        <activity
-            android:name=".HomeActivity"
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
